<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuKal">

    <Button
        android:id="@+id/btnKirim3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="10dp"
        android:text="@string/lblKirim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHsl" />

    <TextView
        android:id="@+id/lblHsl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:text="@string/lblKos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUyd" />

    <EditText
        android:id="@+id/txtInp"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lblKos"
        app:layout_constraintStart_toEndOf="@+id/lblUyd"
        app:layout_constraintTop_toBottomOf="@+id/lblHslGF" />

    <TextView
        android:id="@+id/lblUyd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/lblUyd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHslGF" />

    <ImageView
        android:id="@+id/icLogo3"
        android:layout_width="333dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/listing_application_removebg_preview" />

    <TextView
        android:id="@+id/lblHslGF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/lblKos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icLogo3" />

</androidx.constraintlayout.widget.ConstraintLayout>